change .navigation__list padding at @media(480px) to prevent overflow

--- a/src/components/Navigation/Navigation.css
+++ b/src/components/Navigation/Navigation.css
@@ -80,6 +80,10 @@
     margin: 0 2px 0 0;
   }
 
+  .navigation__list {
+    padding: 0 0 0 18px;
+  }
+
   .navigation__link {
     margin: 0 6px;
     font-size: 13px;
